--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "main": "index.ts",
   "private": true,
   "dependencies": {
+    "@monaco-editor/react": "^4.5.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -12,10 +13,13 @@
     "i18next": "^21.8.14",
     "lodash": "^4.17.21",
     "marked": "^4.0.18",
+    "node": "^20.1.0",
+    "perf_hooks": "^0.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-fetching-library": "^1.7.6",
     "react-ga4": "^1.4.1",
+    "react-i18n-editor": "../react-i18n-editor/react-i18n-editor-0.3.1.tgz",
     "react-i18next": "^11.18.1",
     "react-markdown": "^8.0.0",
     "react-redux": "^7.2.8",
