--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "vite": "^5.0.2"
   },
   "scripts": {
-    "dev": "vite"
+    "dev": "vite",
+    "build": "vite build"
   },
   "browserslist": {
     "production": [
